<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.terrakube</groupId>
		<artifactId>terrakube-platform</artifactId>
		<version>${revision}</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<groupId>io.terrakube.executor</groupId>
	<artifactId>executor</artifactId>
	<version>${revision}</version>
	<name>Terrakube Executor</name>
	<description>Terrakube Spring Boot Executor</description>
	<properties>
		<java.version>25</java.version>
		<azure.version>6.2.0</azure.version>
		<msal4j.version>1.24.1</msal4j.version>
		<commons-text.version>1.15.0</commons-text.version>
		<terraform-spring-boot-starter.version>1.4.0</terraform-spring-boot-starter.version>
		<terrakube-client-starter.version>1.5.1</terrakube-client-starter.version>
		<commons-io.version>2.22.0</commons-io.version>
		<commons-codec>1.22.0</commons-codec>
		<azure-storage-blob.version>12.33.2</azure-storage-blob.version>
		<jgit.version>7.6.0.202603022253-r</jgit.version>
		<bouncy.castle>1.84</bouncy.castle>
		<lombok.version>1.18.46</lombok.version>
		<groovy.version>5.0.5</groovy.version>
		<ivy.version>2.5.3</ivy.version>
		<jcolor.version>5.5.1</jcolor.version>
		<aws-sdk.version>2.43.0</aws-sdk.version>
		<google-storage.version>1.17.0</google-storage.version>
		<slf4j.version>2.0.17</slf4j.version>
		<gcp-libraries-bom.version>26.80.0</gcp-libraries-bom.version>
		<commons-compress.version>1.28.0</commons-compress.version>
		<jedis.version>7.5.0</jedis.version>
		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}
		</sonar.coverage.jacoco.xmlReportPaths>
		<!--BUILDPACK DATA-->
		<buildpack.builder>paketobuildpacks/builder-jammy-base:0.4.563</buildpack.builder>
		<buildpack.java>paketobuildpacks/java:21.6.0</buildpack.java>
		<buildpack.telemetry>paketobuildpacks/opentelemetry:2.25.0</buildpack.telemetry>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>${jedis.version}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>io.terrakube.terraform</groupId>
			<artifactId>terraform-spring-boot-starter</artifactId>
			<version>${terraform-spring-boot-starter.version}</version>
		</dependency>
		<dependency>
			<groupId>io.terrakube.client</groupId>
			<artifactId>terrakube-spring-boot-starter</artifactId>
			<version>${terrakube-client-starter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons-text.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>msal4j</artifactId>
			<version>${msal4j.version}</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-identity</artifactId>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-storage-blob</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons-codec}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>${jgit.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>${bouncy.castle}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit.ssh.apache</artifactId>
			<version>${jgit.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>${groovy.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.ivy</groupId>
			<artifactId>ivy</artifactId>
			<version>${ivy.version}</version>
		</dependency>
		<dependency>
			<groupId>com.diogonunes</groupId>
			<artifactId>JColor</artifactId>
			<version>${jcolor.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>s3</artifactId>
		</dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>sts</artifactId>
        </dependency>
		<dependency>
			<groupId>com.google.cloud</groupId>
			<artifactId>google-cloud-storage</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>${commons-compress.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.azure.spring</groupId>
				<artifactId>spring-cloud-azure-dependencies</artifactId>
				<version>${azure.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>${aws-sdk.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>libraries-bom</artifactId>
				<version>${gcp-libraries-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>io.terrakube.executor.ExecutorApplication</mainClass>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
					<image>
						<pullPolicy>IF_NOT_PRESENT</pullPolicy>
					    <builder>${buildpack.builder}</builder>
                    	<buildpacks>
                        	<buildpack>${buildpack.java}</buildpack>
                        	<buildpack>${buildpack.telemetry}</buildpack>
                    	</buildpacks>
                    	<bindings>
                        	<binding>${basedir}/../bindings/ca-certificates:/platform/bindings/ca-certificates</binding>
                    	</bindings>
                    <env>
                        <BP_OPENTELEMETRY_ENABLED>true</BP_OPENTELEMETRY_ENABLED>
						<BP_JVM_VERSION>25</BP_JVM_VERSION>
                    </env>
                	</image>
				</configuration>
				<executions>
                    <execution>
                        <goals>
                            <goal>build-image</goal>
                        </goals>
                    </execution>
                </executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
		</plugins>
	</build>

</project>
